@@ -21,7 +21,6 @@
  */
 
 #include <zebra.h>
-#include <net/ethernet.h>
 
 #include "log.h"
 #include "memory.h"
