@@ -23,7 +23,6 @@
 
 
 #include <zebra.h>
-#include <net/ethernet.h>
 
 #include "log.h"
 #include "hash.h"
