@@ -1,3 +1,8 @@
+2004-05-19 Rivo Nurges <rix at estpak.ee>
+
+	* *.c: Removing many useless net/ethernet.h includes and some tiny
+	  fixes to make it compile on NetBSD and OpenBSD.
+
 2004-05-08 Paul Jakma <paul@dishone.st>
 
 	* isis_zebra.c: Sync with zclient changes.
